--- a/thirst/css/thirstpost.css
+++ b/thirst/css/thirstpost.css
@@ -78,7 +78,7 @@ h2{
 
 @media(max-width:768px) {
 	.head	{
-		margin-top: -60px;
+		margin-top: -55px;
 		margin-bottom: 0px;
 	}
 	.sub	{
